<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_yourProfile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/nav_missingShow"
            android:icon="@drawable/ic_baseline_public_24"
            android:title="@string/finds" />

        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_baseline_wb_sunny_24"
            android:title="@string/weather" />

        <item
            android:id="@+id/nav_editProfile"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_goToRegistration"
            android:icon="@drawable/exit"
            android:title="@string/exit" />
    </group>
</menu>