<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Registration">

    <com.google.android.material.textfield.TextInputLayout
        app:boxStrokeColor="@color/orange"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="60dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:id="@+id/usernameTextName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_login"
        app:hintTextColor="@color/orange"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:counterMaxLength="20"
        app:counterEnabled="true"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            app:hintTextAppearance="@color/orange"
            android:id="@+id/username"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:boxStrokeColor="@color/orange"
        android:layout_below="@id/usernameTextName"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="60dp"
        android:id="@+id/emailTextName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        app:hintTextColor="@color/orange"
        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
        app:counterMaxLength="256"
        app:counterEnabled="true"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            app:hintTextAppearance="@color/orange"
            android:id="@+id/Email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="256"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:boxStrokeColor="@color/orange"
        android:layout_below="@id/emailTextName"
        android:layout_marginTop="40dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        android:layout_marginHorizontal="60dp"
        android:id="@+id/passTextName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        app:hintTextColor="@color/orange"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:counterMaxLength="20"
        app:counterEnabled="true"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            app:hintTextAppearance="@color/orange"
            android:id="@+id/editpass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="256"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        app:cornerRadius="40dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_marginHorizontal="56dp"
        android:id="@+id/entry"
        android:layout_below="@id/passTextName"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/enter"
        android:textSize="16dp"
        android:textColor="@color/orange"/>

    <com.google.android.material.button.MaterialButton
        app:cornerRadius="40dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_marginHorizontal="56dp"
        android:id="@+id/registaration"
        android:layout_below="@id/entry"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/register"
        android:textSize="16dp"
        android:textColor="@color/orange"/>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registaration"
        android:gravity="center"
        android:text="@string/forgot_your_password"
        android:textSize="20dp"
        android:textColor="@color/orange" />

    <TextView
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot"
        android:gravity="center"
        android:text="@string/reset_password"
        android:textColor="@color/orange"
        android:textSize="20dp"
        android:textStyle="bold" />
</RelativeLayout>